# ForestClaw

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: ci_cmake.yml
applications/: CMakeLists.txt
applications/clawpack/advection/2d/swirl/: CMakeLists.txt
applications/elliptic/heat_phasefield/phasefield/: phasefield
cmake/: options.cmake  p4est.cmake  sc.cmake
src/: CMakeLists.txt  fclaw_config.h.in  fclaw_filesystem.cpp
src/solvers/fc2d_geoclaw/: CMakeLists.txt
